# flask-connexion-rest-part-3/models.py
@@ -1,0 +1,29 @@
+from datetime import datetime
+from config import db, ma
+
+
+
+class Person(db.Model):
+    __tablename__ = 'person'
+    person_id = db.Column(db.Integer, primary_key=True)
+    lname = db.Column(db.String(32))
+    fname = db.Column(db.String(32))
+    timestamp = db.Column(
+        db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow
+    )
+    notes = db.relationship('Note', backref='person', lazy=True)
+
+class Note(db.Model):
+    __tablename__ = 'note'
+    note_id = db.Column(db.Integer, primary_key=True)
+    person_id = db.Column(db.Integer, db.ForeignKey('person.person_id'), nullable=False)
+    content = db.Column(db.String, nullable=False)
+    timestamp = db.Column(
+        db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow
+    )
+
+
+class PersonSchema(ma.ModelSchema):
+    class Meta:
+        model = Person
+        sqla_session = db.session
