# flask-connexion-rest-part-3/notes.py
@@ -1,0 +1,24 @@
+"""
+This is the people module and supports all the REST actions for the
+people data
+"""
+
+from flask import make_response, abort
+from config import db
+from models import Note
+
+
+def read_one(person_id, note_id):
+    pass
+
+
+def create(person_id, note):
+    pass
+
+
+def update(person_id, note_id, note):
+    pass
+
+
+def delete(person_id, note_id):
+    pass
